--- a/packages/system/public/assets/css/common.css
+++ b/packages/system/public/assets/css/common.css
@@ -46,3 +46,12 @@ footer p {
 /*.ng-valid.ng-dirty{*/
     /*border-color:#78FA89;*/
 /*}*/
+
+
+
+
+/** MINE **/
+
+ul.role-list {
+  list-style: none;
+}
