--- a/packages/system/public/views/index.html
+++ b/packages/system/public/views/index.html
@@ -1,105 +1,96 @@
 <section class="welcome container-fluid" data-ng-controller="IndexController">
-  <div class="col-md-12 first">
-    Avalon makes building apps simpler and faster. With this website framework, you can <a href="https://github.com/linnovate/mean/wiki/CLI#user-management">create members</a>, </br>
-    articles, or <a href="http://mean.io/#!/packages">add more features</a> with a package from the community.
-    </div>
-    <div class="col-md-12 row">
-    <div class="info col-md-6">
-      <div class="docs">
-        <div class="welcome-sprite"></div>
-        <h3>Browse the  Documentation</h3>
-        <p class="docs-desc">
-        Before you jump in it's important to read the documentation and learn about the different aspects of extending and developing MEAN.<br/>
-        Mean is based on MongoDB, Express.js, Angular.js and Node.js and even basic proffeciency in these technologies will help you dive in to mean development - luckily there are plenty of <a href="#">tutorials around</a>.
-        </p>
-        <div class="docs-link first">
-          <ul>
-            <li><a href="#">Overview</a></li>
-            <li><a href="#">Packages</a></li>
-          </ul>
-        </div>
-        <div class="docs-link">
-          <ul>
-            <li><a href="#">CLI</a></li>
-            <li><a href="#">Network</a></li>
-          </ul>
-        </div>
-        <div class="docs-link">
-          <ul>
-            <li><a href="#">File Structure</a></li>
-            <li><a href="#">Contribution</a></li>
-          </ul>
-        </div>
-      <span class="morelink"><a href="http://mean.io/#!/docs">All Documentation</a></span>
-      </div>
-      <div class="packages">
-        <div class="welcome-sprite"></div>
-        <h3>Browse our packages</h3>
-        <div class="package">
-          <h4><a href="#">Token</a></h4>
-          <p>"Inplace edit" any text on the site which is wrapped by the mean-token directive.</p>
-        </div>
-        <div class="package">
-          <h4><a href="#">Comments</a></h4>
-          <p>Add comments to your objects including realtime socket.io based notifications.</p>
-        </div>
-        <div class="package">
-        <h4><a href="#">Gmap</a></h4>
-          <p>Add geo information to your objects using a google map with location autocomplete.</p>
-        </div>
-        <div class="package">
-          <h4><a href="#">Mean-admin</a></h4>
-          <p>Admnister your mean application including user, theme, variable and general settings</p>
-        </div>
-        <span class="morelink"><a href="http://mean.io/#!/packages">All Packages</a></span>
-      </div>
-      <div class="community">
-        <div class="welcome-sprite"></div>
-        <h3>Join our community</h3>
-          <i class="socialsprite sprite-facebook"></i>
-          <div class="package">
-            <h4><a href="#">Facebook group</a></h4>
-            <p>Unformal support, news and just hanging out</p>
-          </div>
-            <i class="socialsprite sprite-irc"></i>
-          <div class="package">
-            <h4><a href="#">IRC</a></h4>
-            <p>Support and Techinical discussions</a></p>
-          </div>
-        <i class="socialsprite sprite-github"></i>
-        <div class="package">
-          <h4><a href="http://github.com/linnovate/mean">Github</a></h4>
-          <p>Issues, Support, Code discussions and PRs</p>
-        </div>
-        <i class="socialsprite sprite-stackoverflow"></i>
-        <div class="package">
-          <h4><a href="http://hangout.mean.io">Hangout</a></h4>
-          <p>Video support, shared coding and to meet the people behind mean.io</p>
-        </div>
-      </div>
-    </div>
-    <div class="featured col-md-6">
-      <div class="featured-sites">
-        <h2>Get Inspired</h2>
-        <div class="featuredpic">
-          <img ng-src="{{sites.makeapoint.image}}"/>
-        </div>
-        <h4>{{sites.makeapoint.name}} <span>by
-          <a href="{{sites.makeapoint.link}}">{{sites.makeapoint.author}}</a></span></h4>
-          <p>{{sites.makeapoint.text}}</p>
-        <span class="morelink"><a href="http://builtwith.mean.io">Built with MEAN</a></span>
-      </div>
-      <div class="featured-packages">
-        <h2>Featured Package</h2>
-        <div class="featuredpic">
-          <img ng-src="{{packages.gmap.image}}"/>
-        </div>
-        <h4>{{packages.gmap.name}} <span>by
-          <a href="{{sites.makeapoint.link}}">{{packages.gmap.author}}</a></span></h4>
-          <p>{{packages.gmap.text}}</p>
-        <span class="morelink"><a href="http://builtwith.mean.io">All Packages</a></span>
-      </div>
-    </div>
+
+<h1>Record Game</h1>
+
+<form role="form">
+  <div class="form-group">
+    <label for="playerCount">Number of Players</label>
+    <select ng-model="playerCount" class="form-control" id="playerCount">
+      <option ng-repeat="playerCountOption in playerCountOptions">{{playerCountOption}}</option>
+    </select>
   </div>
+  
+
+  <div class="checkbox">
+    <label>
+      Lady of the Lake? <input type="checkbox" type="ladylake" ng-model="ladyOfTheLake">
+    </label>
+  </div>
+
+
+  <div class="form-group">
+    <label for="questsCompleted">Number of Quests</label>
+    <select ng-model="questsCompleted" class="form-control" id="questsCompleted">
+      <option ng-repeat="questsCompletedOption in questsCompletedOptions">{{questsCompletedOption}}</option>
+    </select>
+  </div>
+  
+
+  <div class="form-group">
+    <label for="numQuests">Victory Condition</label>
+    <select class="form-control" id="victoryCondition">
+      <option ng-repeat="victoryCondition in victoryConditionOptions">{{victoryCondition}}</option>
+    </select>
+  </div>
+
+  <hr>
+  <h2>{{loyalServantCount}} Loyal Servants of Arthur</h2>
+  
+  <!-- loop Loyal Servants here -->
+  <ul class="role-list">
+    <li ng-repeat="loyalServantPlayer in loyalServantPlayers">
+      <div class="form-group" style="width: 60%; float: left;">
+        <label for="lsPlayer">Player</label>
+        <select class="form-control" id="lsPlayer[]">
+          <option ng-repeat="player in playerOptions">{{player}}</option>
+        </select>
+      </div>
+
+      <div class="form-group" style="width: 35%; float: left; margin-left: 5%;">
+        <label for="lsRole">Role</label>
+        <select class="form-control" id="lsRole[]">
+          <option ng-repeat="loyalServant in loyalServantOptions">{{loyalServant}}</option>
+        </select>
+      </div>
+    </li>
+  </ul>
+
+  <hr />
+
+  <h2>{{minionCount}} Minions of Mordred</h2>
+  
+  <!-- loop Minions here -->
+  <ul class="role-list">
+    <li ng-repeat="minionPlayer in minionPlayers">
+      <div class="form-group" style="width: 60%; float: left;">
+        <label for="mPlayer">Player</label>
+        <select class="form-control" id="mPlayer[]">
+          <option ng-repeat="player in playerOptions">{{player}}</option>
+        </select>
+      </div>
+      <div class="form-group" style="width: 35%; float: left; margin-left: 5%;">
+        <label for="numQuests">Role</label>
+        <select class="form-control" id="playerCount">
+          <option ng-repeat="minion in minionOptions">{{minion}}</option>
+        </select>
+      </div>
+    </li>
+  </ul>  
+  <hr />
+  <h2>Assassinated</h2>
+  <!-- Optional assassinated here -->
+  <!-- Show if LS victory -->
+  <!-- Show and lock if Assassinated victory -->
+  
+  <div class="form-group">
+    <label for="numQuests">Player</label>
+    <select class="form-control" id="mPlayer[]">
+      <option ng-repeat="player in playerOptions">{{player}}</option>
+    </select>
+  </div>
+
+
+  <button type="submit" class="btn btn-block">Submit</button>
+</form>
 
 </section>
